# django-computed-property

./: pyproject.toml  tox.ini
.run/: Unnamed.run.xml  pytest in computed_property.run.xml
