[tool.poetry]
name = "computed-property"
version = "0.3.0"
description = "Computed property model fields for Django"
authors = [
        "Jason Brechin <brechinj@gmail.com>",
        "Sam Bishop <sam@techdragon.io>"
]
classifiers=[
        'Environment :: Web Environment',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: Implementation :: CPython',
        'Programming Language :: Python :: Implementation :: PyPy',
        'Framework :: Django',
]
packages = [
        { include = "computed_property/*.py" }
]
[tool.poetry.dependencies]
python = ">=3.6"
attrs = ">=17.4.0"
Django = ">=1.11"

[tool.poetry.dev-dependencies]
pytest = ">=2.7.3"
pytest-django = ">=2.8.0"
tox = "^3.24.5"
tox-poetry = "^0.4.1"
poetry = "^1.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
